...
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/map"
        android:title="Map"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="Profile"/>

</menu>

